<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.flat.categories.BankAccountFragment">

    <TextView
        android:id="@+id/text_region"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stringRegion"
        android:layout_marginStart="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="32dp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputRegion"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        app:boxStrokeColor="@color/black"
        app:boxStrokeWidth="2dp"
        app:boxCornerRadiusBottomEnd="32dp"
        app:boxCornerRadiusBottomStart="32dp"
        app:boxCornerRadiusTopEnd="32dp"
        app:boxCornerRadiusTopStart="32dp"
        app:endIconDrawable="@drawable/ic_chevron"
        app:endIconTint="@color/black"
        app:layout_constraintCircleRadius="72dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_region">

        <AutoCompleteTextView
            android:id="@+id/autoCompleteColor"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/white"
            android:inputType="none"
            android:hint="@string/string_chooseRegion" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textBankAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stringBankAccount"
        android:layout_marginStart="30dp"
        app:layout_constraintTop_toBottomOf="@id/textInputRegion"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="32dp"
        />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edEmailInput"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/border_lines"
        app:backgroundTint="#CCEBEBF1"
        android:fontFamily="@font/muller_regular"
        android:hint="@string/stringEnterBankAccount"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textBankAccount" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btContinue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/border_lines"
        android:fontFamily="@font/muller_regular"
        android:text="@string/stringContinue"
        android:layout_marginBottom="25dp"
        app:backgroundTint="#CC1124F1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/btCancel"
        app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btCancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/border_line_black"
        android:textColor="@color/black"
        android:text="@string/string_cancel"
        android:fontFamily="@font/muller_regular"
        app:layout_constraintEnd_toStartOf="@id/btContinue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/btContinue" />

</androidx.constraintlayout.widget.ConstraintLayout>