<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/textSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/muller_regular"
        android:text="Войти"
        android:layout_marginTop="50dp"
        android:textColor="@color/black"
        android:textFontWeight="600"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/muller_regular"
        android:text="@string/stringLogin"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textSignIn" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edEmailInput"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/border_lines"
        app:backgroundTint="#CCEBEBF1"
        android:fontFamily="@font/muller_regular"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_login" />

    <TextView
        android:id="@+id/text_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/muller_regular"
        android:text="@string/stringPassword"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edEmailInput" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        app:backgroundTint="#CCEBEBF1"
        android:textSize="16sp"
        android:background="@drawable/border_lines"
        android:fontFamily="@font/muller_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_password" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/border_lines"
        app:backgroundTint="#CC1124F1"
        android:text="@string/stringSignIn"
        android:fontFamily="@font/muller_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edPassword" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/border_lines"
        android:textColor="@color/black"
        app:backgroundTint="#CCEBEBF1"
        android:text="@string/string_cancel"
        android:fontFamily="@font/muller_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btSignIn" />

    <TextView
        android:id="@+id/txtForgotEmail"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:clickable="true"
        android:text="@string/forgot_email"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/muller_regular"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/btCancel"
        app:layout_constraintEnd_toStartOf="@id/charLine"
        />

    <TextView
        android:id="@+id/txtForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:fontFamily="@font/muller_regular"
        android:text="@string/forgot_password"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toEndOf="@+id/charLine"
        app:layout_constraintTop_toBottomOf="@id/btCancel" />


    <TextView
        android:id="@+id/charLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:text="|"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/muller_regular"
        app:layout_constraintTop_toBottomOf="@id/btCancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btCreateAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/border_line_black"
        android:textColor="@color/black"
        android:text="@string/stringCreateAccount"
        android:fontFamily="@font/muller_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/charLine" />


</androidx.constraintlayout.widget.ConstraintLayout>