<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.optionFragment">

    <TextView
        android:id="@+id/chooseText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stringChooseText"
        android:textSize="16sp"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:src="@drawable/unnamed"
        app:layout_constraintBottom_toBottomOf="@id/flat"
        app:layout_constraintTop_toTopOf="@id/flat" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="255dp"
        android:layout_marginHorizontal="30dp"
        android:background="@drawable/border_line_black"
        app:layout_constraintBottom_toBottomOf="@+id/flat"
        app:layout_constraintEnd_toEndOf="@+id/flat"
        app:layout_constraintStart_toStartOf="@+id/flat"
        app:layout_constraintTop_toTopOf="@+id/flat" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/flat"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:text="@string/stringFlat"
        android:textSize="20sp"
        android:textFontWeight="1000"
        android:textColor="@color/white"
        android:backgroundTint="#23000000"
        android:background="@drawable/border_lines"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/chooseText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="265dp"
        android:layout_marginHorizontal="30dp"
        android:background="@drawable/border_line_black"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="@+id/house"
        app:layout_constraintStart_toStartOf="@+id/house"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:src="@drawable/house"
        app:layout_constraintBottom_toBottomOf="@id/house"
        app:layout_constraintTop_toTopOf="@id/house" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/house"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:text="@string/stringHouse"
        android:textSize="20sp"
        android:backgroundTint="#23000000"
        android:textFontWeight="1000"
        android:textColor="@color/white"
        android:background="@drawable/border_lines"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/flat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>